fix cards not fitting

--- a/app/src/components/EventGameList/styles.module.scss
+++ b/app/src/components/EventGameList/styles.module.scss
@@ -31,6 +31,7 @@ p {
 }
 
 .wrapper {
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
