--- a/app/src/components/GameList/styles.module.scss
+++ b/app/src/components/GameList/styles.module.scss
@@ -27,6 +27,7 @@ a :not(h1) {
 }
 
 .wrapper {
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
